--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boxcloud-cms-backend",
+  "name": "nextcam-cloud-operation-data",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -29,6 +29,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "elastic-apm-node": "^3.21.1",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "ioredis": "^4.19.4",
