--- a/Main/Projects/NextPay/typescript-express-boilerplate/package.json
+++ b/Main/Projects/NextPay/typescript-express-boilerplate/package.json
@@ -35,6 +35,7 @@
     "@types/json-stringify-safe": "^5.0.0",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/lodash": "^4.14.171",
+    "@types/md5": "^2.3.1",
     "@types/mongoose": "^5.7.37",
     "@types/node": "^14.0.13",
     "@types/redis": "^2.8.14",
