--- a/Main/Projects/NextPay/typescript-express-boilerplate/package.json
+++ b/Main/Projects/NextPay/typescript-express-boilerplate/package.json
@@ -14,6 +14,7 @@
   "author": "duymt@fastgo.mobi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "elastic-apm-node": "^3.9.0",
