--- a/Main/Projects/NextPay/typescript-express-boilerplate/package.json
+++ b/Main/Projects/NextPay/typescript-express-boilerplate/package.json
@@ -1,46 +1,37 @@
 {
-  "name": "express-template",
-  "version": "1.0.0",
+  "name": "nextcam-cloud-common",
+  "version": "1.0.10",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "node ./dist/index.js",
-    "dev": "nodemon -w src --exec node --inspect=0.0.0.0:9227 -r dotenv/config -r ts-node/register src/index.ts",
+    "dev": "nodemon -w src --exec node -r dotenv/config -r ts-node/register src/index.ts",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./",
     "lint-fix": "eslint --fix --ext .js,.jsx,.ts,.tsx ./",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "mocha --require ts-node/register 'src/**/*.spec.ts' --recursive --timeout 60000 --exit"
   },
   "keywords": [],
   "author": "duymt@fastgo.mobi",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
-    "chalk": "^4.1.0",
+    "chai": "^4.3.4",
     "dotenv": "^8.2.0",
-    "elastic-apm-node": "^3.9.0",
     "express": "^4.17.1",
-    "fastest-validator": "^1.9.0",
-    "ioredis": "^4.17.3",
-    "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.19",
     "md5": "^2.3.0",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.12.3",
-    "redis": "^3.1.2",
-    "triple-beam": "^1.3.0",
-    "winston": "^3.2.1"
+    "mocha": "^9.1.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
-    "@types/ioredis": "^4.16.7",
     "@types/json-stringify-safe": "^5.0.0",
-    "@types/jsonwebtoken": "^8.3.5",
     "@types/lodash": "^4.14.171",
     "@types/md5": "^2.3.1",
-    "@types/mongoose": "^5.7.37",
-    "@types/node": "^14.0.13",
-    "@types/redis": "^2.8.14",
-    "@types/triple-beam": "^1.3.2",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^14.18.5",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-typescript": "^5.0.0",
